--- a/src/main/webapp/app/src/app/customer/manage-customer.tpl.html
+++ b/src/main/webapp/app/src/app/customer/manage-customer.tpl.html
@@ -36,7 +36,7 @@
         <div class="form-group form-group-lg">
             <label class="col-sm-2 control-label" for="state">State:</label>
             <div class="col-sm-4">
-                <select ui-select2 id="state" ng-model="customer.state" data-placeholder="Choose State" style="width: 100%">
+                <select kendo-combo-box id="state" ng-model="customer.state" data-placeholder="Choose State" class="form-control">
                     <option value=""></option>
                     <option ng-repeat="state in states" value="{{state.value}}">{{state.display}}</option>
                 </select>
@@ -45,19 +45,19 @@
         <div class="form-group form-group-lg">
             <label class="col-sm-2 control-label" for="zip">Zip:</label>
             <div class="col-sm-4">
-                <input id="zip" type="text" ng-model="customer.zip" ui-mask="99999" class="form-control"/>
+                <input id="zip" kendo-masked-text-box ng-model="customer.zip" class="form-control" k-mask="'99999-0000'" k-prompt-char="' '"/>
             </div>
         </div>
         <div class="form-group form-group-lg">
             <label class="col-sm-2 control-label" for="phone1">Phone 1:</label>
             <div class="col-sm-4">
-                <input id="phone1" type="text" ng-model="customer.phone1" ui-mask="(999) 999-9999" class="form-control"/>
+                <input id="phone1" kendo-masked-text-box ng-model="customer.phone1" class="form-control" k-mask="'(999) 000-0000'" k-prompt-char="' '"/>
             </div>
         </div>
         <div class="form-group form-group-lg">
             <label class="col-sm-2 control-label" for="phone2">Phone 2:</label>
             <div class="col-sm-4">
-                <input id="phone2" type="text" ng-model="customer.phone2" ui-mask="(999) 999-9999" class="form-control"/>
+                <input id="phone2" kendo-masked-text-box ng-model="customer.phone2" class="form-control" k-mask="'(999) 000-0000'"/>
             </div>
         </div>
         <div class="form-group form-group-lg" ng-class="{ 'has-error': customerForm.email.$invalid }">
