--- a/src/main/webapp/app/src/app/proposal/manage-proposal.tpl.html
+++ b/src/main/webapp/app/src/app/proposal/manage-proposal.tpl.html
@@ -2,138 +2,25 @@
     <h1 class="page-header">
         Proposal Session
     </h1>
-    <form name="proposalForm" class="form-horizontal">
-        <!-- Nav tabs -->
-        <ul class="nav nav-tabs">
-            <li role="presentation" class="active">
-                <a href="" ui-sref="customerGoal" role="tab" data-toggle="tab">
-                    <i class="fa fa-soccer-ball-o"></i> Customer Goal
-                </a>
-            </li>
-            <li role="presentation">
-                <a href="" ui-sref="jpmModel" role="tab" data-toggle="tab">
-                    <i class="fa fa-pencil-square"></i> JPM Model
-                </a>
-            </li>
-            <li role="presentation">
-                <a href="" ui-sref="assumedSalesCalc" role="tab" data-toggle="tab">
-                    <i class="fa fa-calculator"></i> Assumed Sales Calc
-                </a>
-            </li>
-            <li role="presentation">
-                <a href="" ui-sref="commissionCalc" role="tab" data-toggle="tab">
-                    <i class="fa fa-calculator"></i> Commission Calc
-                </a>
-            </li>
-            <li role="presentation">
-                <a href="" ui-sref="recruitingEffortCalc" role="tab" data-toggle="tab">
-                    <i class="fa fa-calculator"></i> Recruiting Effort Calc
-                </a>
-            </li>
-            <li role="presentation">
-                <a href="" ui-sref="advancedDebtCalc" role="tab" data-toggle="tab">
-                    <i class="fa fa-calculator"></i> Advanced:Debt Calc
-                </a>
-            </li>
-            <li role="presentation">
-                <a href="" ui-sref="proposalOutput" role="tab" data-toggle="tab">
-                    <i class="fa fa-newspaper-o"></i> Proposal
-                </a>
-            </li>
+    <div kendo-tab-strip>
+        <ul>
+            <li class="k-state-active"><i class="fa fa-soccer-ball-o"></i> Customer Goal</li>
+            <li><i class="fa fa-pencil-square"></i> JPM Model</li>
+            <li><i class="fa fa-calculator"></i> Assumed Sales Calc</li>
+            <li><i class="fa fa-calculator"></i> Commission Calc</li>
+            <li><i class="fa fa-calculator"></i> Recruiting Effort Calc</li>
+            <li><i class="fa fa-calculator"></i> Advanced:Debt Calc</li>
+            <li><i class="fa fa-newspaper-o"></i> Proposal</li>
         </ul>
 
         <!-- Tab panes -->
-        <div class="tab-content">
-            <div role="tabpanel" class="tab-pane active" id="customerGoal">
-                <h1 class="page-header">Customer Goals</h1>
-
-                <form name="proposalSessionForm" ng-submit="createProposalSession()" class="form-horizontal">
-                    <div class="form-group form-group-lg">
-                        <label class="col-sm-2 control-label" for="contactName">Contact Name:</label>
-                        <div class="col-sm-4">
-                            <input id="contactName" type="text" ng-model="proposalSession.customerGoal.contactName" ng-disabled="true" class="form-control" />
-                        </div>
-                    </div>
-                    <div class="form-group form-group-lg">
-                        <label class="col-sm-2 control-label" for="companyName">Company Name:</label>
-                        <div class="col-sm-4">
-                            <input kendo-auto-complete id="companyName"
-                                   ng-model="proposalSession.customerGoal.companyName"
-                                   k-options="customerAutoComplete" class="form-control" />
-                        </div>
-                    </div>
-                    <div class="form-group form-group-lg">
-                        <label class="col-sm-2 control-label" for="currentValuation">Current Valuation:</label>
-                        <div class="col-sm-4">
-                            <input kendo-numeric-text-box id="currentValuation" k-options="kendoNumericTextBoxOptions" k-ng-model="proposalSession.customerGoal.currentValuation" style="width: 100%; height: 100%;" />
-                        </div>
-                    </div>
-                    <div class="form-group form-group-lg">
-                        <label class="col-sm-5 control-label"><h4>Annual Revenue Goals</h4></label>
-                    </div>
-                    <div class="form-group form-group-lg">
-                        <label class="col-sm-2 control-label" for="revenueGoalYear1">Year 1:</label>
-                        <div class="col-sm-4">
-                            <input kendo-numeric-text-box id="revenueGoalYear1" k-options="kendoNumericTextBoxOptions" k-ng-model="proposalSession.customerGoal.revenueGoalYear1" style="width: 100%; height: 100%;" />
-                        </div>
-                    </div>
-                    <div class="form-group form-group-lg">
-                        <label class="col-sm-2 control-label" for="revenueGoalYear2">Year 2:</label>
-                        <div class="col-sm-4">
-                            <input kendo-numeric-text-box id="revenueGoalYear2" k-options="kendoNumericTextBoxOptions" k-ng-model="proposalSession.customerGoal.revenueGoalYear2" style="width: 100%; height: 100%;" />
-                        </div>
-                    </div>
-                    <div class="form-group form-group-lg">
-                        <label class="col-sm-2 control-label" for="revenueGoalYear3">Year 3:</label>
-                        <div class="col-sm-4">
-                            <input kendo-numeric-text-box id="revenueGoalYear3" k-options="kendoNumericTextBoxOptions" k-ng-model="proposalSession.customerGoal.revenueGoalYear3" style="width: 100%; height: 100%;" />
-                        </div>
-                    </div>
-                    <div class="form-group form-group-lg">
-                        <label class="col-sm-2 control-label" for="revenueGoalYear4">Year 4:</label>
-                        <div class="col-sm-4">
-                            <input kendo-numeric-text-box id="revenueGoalYear4" k-options="kendoNumericTextBoxOptions" k-ng-model="proposalSession.customerGoal.revenueGoalYear4" style="width: 100%; height: 100%;" />
-                        </div>
-                    </div>
-                    <div class="form-group form-group-lg">
-                        <label class="col-sm-2 control-label" for="revenueGoalYear5">Year 5:</label>
-                        <div class="col-sm-4">
-                            <input kendo-numeric-text-box id="revenueGoalYear5" k-options="kendoNumericTextBoxOptions" k-ng-model="proposalSession.customerGoal.revenueGoalYear5" style="width: 100%; height: 100%;" />
-                        </div>
-                    </div>
-                    <div class="form-group form-group-lg">
-                        <label class="col-sm-2 control-label" for="upfrontFees">Upfront Fees:</label>
-                        <div class="col-sm-4">
-                            <input kendo-numeric-text-box id="upfrontFees" k-options="kendoNumericTextBoxOptions" k-ng-model="proposalSession.customerGoal.upfrontFees" style="width: 100%; height: 100%;" />
-                        </div>
-                    </div>
-                    <div class="form-group form-group-lg">
-                        <label class="col-sm-2 control-label" for="upfrontFees">Lag Time:</label>
-                        <div class="col-sm-4">
-                            <input kendo-numeric-text-box id="lagTime" k-options="lagTimeTextBoxOptions" k-ng-model="proposalSession.customerGoal.lagTime" style="width: 100%; height: 100%;" />
-                        </div>
-                    </div>
-                </form>
-            </div>
-            <div role="tabpanel" class="tab-pane" id="jpmModel">
-                JPM Model
-            </div>
-            <div role="tabpanel" class="tab-pane" id="assumedSalesCalc">
-                Assumed Sales Caculator
-            </div>
-            <div role="tabpanel" class="tab-pane" id="commissionCalc">
-                Commission Calculator
-            </div>
-            <div role="tabpanel" class="tab-pane" id="recruitingEffortCalc">
-                Recruiting Effort Calculator
-            </div>
-            <div role="tabpanel" class="tab-pane" id="advancedDebtCalc">
-                Advanced to Debt Ratio Calculator
-            </div>
-            <div role="tabpanel" class="tab-pane" id="proposalOutput">
-                Proposal Output
-            </div>
-        </div>
-    </form>
+        <div customer-goal></div>
+        <div jpm-model></div>
+        <div assumed-sales-calc></div>
+        <div commission-calc></div>
+        <div recruiting-effort-calc></div>
+        <div advanced-debt-calc></div>
+        <div proposal-output></div>
+    </div>
 </div>
 
