Converted tabstrip to be the Kendo-ui control and also separated the templates for each tab as individual directives

--- a/src/main/webapp/app/src/app/proposalSession/customer-goal.tpl.html
+++ b/src/main/webapp/app/src/app/proposalSession/customer-goal.tpl.html
@@ -11,7 +11,7 @@
         <label class="col-sm-2 control-label" for="companyName">Company Name:</label>
         <div class="col-sm-4">
             <input kendo-auto-complete id="companyName"
-                   ng-model="proposalSession.customerGoal.companyName"
+                   ng-model="companyNameLookup"
                    k-options="customerAutoComplete" class="form-control" style="height: 100%;"/>
         </div>
     </div>
