Customer Goal Saves, Updates and retrieves the last modified Proposal Session when navigating away from the Proposal Session menu and returning to it

--- a/src/main/webapp/app/src/app/proposalSession/customer-goal.tpl.html
+++ b/src/main/webapp/app/src/app/proposalSession/customer-goal.tpl.html
@@ -4,7 +4,7 @@
     <div class="form-group form-group-lg">
         <label class="col-sm-2 control-label" for="contactName">Contact Name:</label>
         <div class="col-sm-4">
-            <input id="contactName" type="text" ng-model="proposalSession.customerGoal.contactName" ng-disabled="true" class="form-control" />
+            <input id="contactName" type="text" ng-model="proposalSession.customerGoal.customer.contactName" ng-disabled="true" class="form-control" />
         </div>
     </div>
     <div class="form-group form-group-lg">
